--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# projects specifics
+.github/
+pgdata/
+temp/
+staticfiles/
+nginx/
+.gitignore
+cred.txt
+scraper/*.txt
+scraper/*.py
+scraper/*.in
+scraper/*.md
+scraper/*.csv
+scraper/.gitattributes
+*.sublime-project
+*.sublime-workspace
+*.xlsx
+*/migrations/*
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,6 +23,12 @@ __pycache__/
 
 # C extensions
 *.so
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
 # Distribution / packaging
 .Python
@@ -20,6 +44,8 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -35,26 +61,8 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
 
-# Translations
-*.mo
-*.pot
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
 
 # Flask stuff:
 instance/
@@ -69,14 +77,19 @@ docs/_build/
 # PyBuilder
 target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
 # pyenv
 .python-version
 
-# celery beat schedule file
-celerybeat-schedule
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
 
 # SageMath parsed files
 *.sage.py
@@ -89,25 +102,3 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-
-# IDEs
-.idea
-.vscode
-
-
-# files
-seismic_site/media/*
-~*.xlsx
